fix: fixing layout problem

--- a/app/components/header/header.component.css
+++ b/app/components/header/header.component.css
@@ -1,4 +1,6 @@
 .container{
+    position: absolute;
+    z-index: 10000;
     width: 100%;
     height: 58px;
     background: #FFFFFF;
